   on Ben's work
 - (djm) Specify --datadir in RPM spec files so smartcard applet gets
    put somewhere sane. Add Ssh.bin to manifest.
 - (djm) Make smartcard support conditional in Redhat RPM spec
 - (bal) LICENCE update.  Has not been done in a while.
 - OpenBSD CVS Sync
   - stevesk@cvs.openbsd.org 2001/09/17 17:57:57
     [scp.1 scp.c sftp.1 sftp.c]
     add -Fssh_config option; ok markus@

20010917
 - (djm) x11-ssh-askpass-1.2.4 in RPM spec, revert workarounds
 - (tim) [includes.h openbsd-compat/getopt.c openbsd-compat/getopt.h]
	 rename getopt() to BSDgetopt() to keep form conflicting with
	 system getopt().
	 [Makefile.in configure.in] disable filepriv until I can add
	 missing procpriv calls.

20010916
 - (djm) Workaround XFree breakage in RPM spec file
 - (bal) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2001/09/16 14:46:54
      [session.c]
      calls krb_afslog() after setting $HOME; mattiasa@e.kth.se; fixes
      pr 1943b

20010915
 - (djm) Make do_pre_login static to avoid prototype #ifdef hell
 - (djm) Sync scard/ stuff
 - (djm) Redhat spec file cleanups from Pekka Savola <pekkas@netcore.fi> and
   Redhat
 - (djm) Redhat initscript config sanity checking from Pekka Savola 
   <pekkas@netcore.fi>
 - (djm) Clear supplemental groups at sshd start to prevent them from 
   being propogated to random PAM modules. Based on patch from Redhat via
   Pekka Savola <pekkas@netcore.fi>
 - (djm) Make sure rijndael.c picks config.h
 - (djm) Ensure that u_char gets defined

20010914
 - (bal) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2001/09/13
     [rijndael.c rijndael.h]
     missing $OpenBSD
   - markus@cvs.openbsd.org 2001/09/14
     [session.c]
     command=xxx overwrites subsystems, too
   - markus@cvs.openbsd.org 2001/09/14
     [sshd.c]
     typo

20010913
 - (bal) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2001/08/23 11:31:59
     [cipher.c cipher.h]
     switch to the optimised AES reference code from