@@ -12,6 +12,9 @@
    - stevesk@cvs.openbsd.org 2001/09/17 17:57:57
      [scp.1 scp.c sftp.1 sftp.c]
      add -Fssh_config option; ok markus@
+   - stevesk@cvs.openbsd.org 2001/09/17 19:27:15
+     [kexdh.c kexgex.c key.c key.h ssh-dss.c ssh-keygen.c ssh-rsa.c]
+     u_char*/char* cleanup; ok markus
 
 20010917
  - (djm) x11-ssh-askpass-1.2.4 in RPM spec, revert workarounds
@@ -6472,4 +6475,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1532 2001/09/18 05:38:44 mouring Exp $
+$Id: ChangeLog,v 1.1533 2001/09/18 05:41:19 mouring Exp $
